created critical incidents template, impemented display screen for critical incidents. Made changes to submission breakdown table

--- a/src/apollo/core/templates/core/checklist_summary_breakdown.html
+++ b/src/apollo/core/templates/core/checklist_summary_breakdown.html
@@ -39,7 +39,7 @@
 		      <div class="row">
 				<div class="span12">
 					<h5>AA. Were any election officials present upon arrival?</h5>
-					<table  id="mytable" class="table table-bordered table-fixed-header">
+					<table  id="mytable" class="table table-bordered">
 						<thead class="header">
 							<tr>
 								<td bgcolor="#eeeeee"></td>
