--- a/src/apollo/core/templates/core/checklist_summary.html
+++ b/src/apollo/core/templates/core/checklist_summary.html
@@ -7,11 +7,11 @@
       {% analysis_location_navigation form location %}
   </div>
   <div class="span4">
-      <form class="form-horizontal pull-right" action="" method="post" accept-charset="utf-8">
+        <form class="form-horizontal pull-right" action="" method="post" accept-charset="utf-8">
           {% csrf_token %}
           {{ filter_form.sample }}
           <button class="btn btn-warning" style="margin-left:1em" type="submit"><i class="icon-search icon-white"></i> Filter</button>
-    </form>
+        </form>
   </div>
 </div>
 <div class="row">
@@ -25,7 +25,7 @@
 		<table width="100%" class="table table-striped table-bordered">
 			<tr>
 				<td width="30" rowspan="2"><b>{{ tag }}</b></td>
-                <td rowspan="2"><a href="javascript:;">{{ question }}</a></td>
+                <td rowspan="2"><a href="{% url submissions_analysis_location_tag form.pk location.pk tag %}">{{ question }}</a></td>
 				{% if tag_stats.type == 'numeric' %}
 				<td bgcolor="#eee">Mean</td>
 				{% else %}
